# gany

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_EN.md
examples/: CMakeLists.txt  test_gany.cpp
gany-c-api/: CMakeLists.txt
gany-c-api/cmake/: gany-c-api.cmake
gany-c-api/include/gx/: gany_c_api.h  reg_gany_c_module.h
gany-c-api/src/: gany_c_api.cpp  reg_gany_c_module.cpp
gany-interface/: CMakeLists.txt
gany-interface/cmake/: gany.cmake
gany-interface/include/gx/: enum.h  gany.h  gany_module_def.h  gany_pfn.h  gglobal.h  platform.h
